[tool.poetry]
name = "reelforge"
version = "0.1.0"
description = "Fully automated generation of short-form videos"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
g4f = {extras = ["all"], version = "^0.3.2.2"}
requests = "^2.32.3"
moviepy = "^1.0.3"
srt-equalizer = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pygame = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
